
=== (next) ===
BREAKING CHANGE: converted all code to E6
NEW: webpack-based UMD dist entry point

=== 1.6.0 (2017-12-05) ===
NEW: FTN3 v1.8 "maxreqsize" & "maxrspsize" function definition attribute

=== 1.5.7 (2017-11-25) ===
FIXED: license disclaimers

=== 1.5.6 (2017-11-21) ===
FIXED: major rework of type checking in SpecTools (more clean & reliable now)
    - makes sure derived types override base type contraints
    - allows enum to be part of variant (previously failed in some scenarios)
NEW: added dump of parameter value on client-side request check failure

=== 1.5.5 (2017-10-02) ===
FIXED: to check HTTP status code in browser requests
    - affectes use of SimpleCCM with generic HTTP failures

=== 1.5.4 (2017-09-08) ===
SECURITY: fixed partial map check on skipped optional field
NEW: added SpecTool.error event for more descriptive error reporting

=== 1.5.3 (2017-09-04) ===
FIXED: added workaround for NPM: https://github.com/npm/npm/issues/16723

=== 1.5.2 (2017-09-04) ===
SECURITY: fixed ignored "elemtype" of map, if "fields" is not set
FIXED: to allow "null" as value of "any" typed field in "map"

=== 1.5.1 (2017-09-03) ===
BREAKING: "any" is not allowed to be "undefined" anymore
BREAKING: "any" is allowed to be null now
FIXED: check failure when "any" is used in type variant or custom type

=== 1.5.0 (2017-09-03) ===
BREAKING: changed futoin-asyncsteps to be peer dependency
FIXED: CCM.assertIface() to handle check for inheritted interfaces

=== 1.4.3 (2017-08-29) ===
NEW: upgraded to AsyncSteps v1.7 with FTN12 v1.8 support

=== 1.4.2 (2017-08-24) ===
FIXED: improved error handling on spec loading

=== 1.4.1 (2017-08-19) ===
FIXED: check failure when "boolean" is used in type variant

=== 1.4.0 (2017-08-18) ===
NEW: FTN7 v1.6 support

=== 1.3.2 (2017-08-18) ===
NEW: auto fallback to "-internal" credentials for internal comms
NEW: default TTL for CacheFace

=== 1.3.1 (2017-08-11) ===
BREAKING: dropped Node,js < v6 support