@@ -105,6 +105,7 @@ class SimpleCCMImpl {
 
         this.options = options;
         this.comms = {};
+        this.limiters = {};
     }
 
     onRegister( as, info ) {
