@@ -1,10 +1,10 @@
 {
   "name": "futoin-invoker",
   "version": "1.6.0",
-  "description": "FutoIn Invoker - Reference Implementation. Transparently and efficiently invoke remote or local service methods with strict API definition for Node and Browser",
+  "description": "Transparently, efficiently and securely invoke remote or local service methods with strict API definition for Node and Browser",
   "main": "lib/invoker.js",
   "browser": "dist/futoin-invoker.js",
-  "files" : [
+  "files": [
     "dist/",
     "examples/",
     "lib/",
@@ -59,10 +59,11 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "eslint": "^4.12.1",
-    "futoin-asyncsteps": "^1.10.1",
+    "futoin-asyncsteps": "^1.10.2",
     "grunt": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-eslint": "^20.1.0",
