@@ -31,6 +31,16 @@ module.exports = {
                     },
                 },
             },
+            {
+                test: /node_modules\/futoin-asyncsteps\/[A-Z].*\.js$/,
+                use: {
+                    loader: 'babel-loader',
+                    options: {
+                        presets: [ 'babel-preset-env' ],
+                        plugins: [ "transform-object-assign" ],
+                    },
+                },
+            },
         ],
     },
     plugins: [
