@@ -1,6 +1,7 @@
 
 === (next) ===
-BREAKING CHANGE: converted all code to E6
+BREAKING CHANGE: converted all code to ES6
+BREAKING CHANGE: introduced FTN7 v1.7 request limit zones
 NEW: webpack-based UMD dist entry point
 
 === 1.6.0 (2017-12-05) ===
